--- a/coworking.html
+++ b/coworking.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
     <!-- Google Tag Manager -->
     <script>
@@ -21,7 +20,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Coworking</title>
+    <title>Builtable Coworking</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -98,7 +97,7 @@
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="index.html"><img src="css/img/logo.png";></a>
+                        <a class="page-scroll" href="index.html"><img alt="builtable logo" src="css/img/logo.png";></a>
                     </li>
                     <li>
                         <a class="page-scroll active" href="coworking.html">Coworking</a>
