--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 
 <head>
 <!-- Google Tag Manager -->
@@ -13,10 +13,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="We are a coworking space on weekdays and we convert the space for makers on weeknights and weekends by providing workshops and talks.">
+    <meta name="author" content="Builtable Coworking">
 
-    <title>Builtable</title>
+    <title>Builtable Coworking</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -70,7 +70,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#home"><img src="css/img/logo.png";></a>
+                        <a class="page-scroll" href="#home"><img alt="Builtable logo" src="css/img/logo.png";></a>
                     </li>
                     <li>
                         <a class="page-scroll" href="coworking.html">Coworking</a>
@@ -216,7 +216,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                 </div>
                 <div class="col-lg-6">
-                 <img src="assets/images/contact.jpg" class="img-responsive" alt="">
+                 <img src="assets/images/contact.jpg" class="img-responsive"  alt="Builtable customer service">
                 </div>
               </div>
 
