--- a/learn.html
+++ b/learn.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 
 <head>
     <!-- Google Tag Manager -->
@@ -18,10 +18,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="We are a coworking space on weekdays and we convert the space for makers on weeknights and weekends by providing workshops and talks.">
+    <meta name="author" content="Builtable Coworking">
 
-    <title>Builtable</title>
+    <title>Builtable Makers</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -125,7 +125,7 @@
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="index.html"><img src="css/img/logo.png";></a>
+                        <a class="page-scroll" href="index.html"><img alt="Builtable logo" src="css/img/logo.png";></a>
                     </li>
                     <li>
                         <a class="page-scroll" href="coworking.html">Coworking</a>
