--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="commleft">
                     <br><p>
                     We are searchable at <strong>Google Maps</strong> and <strong>Waze</strong>!<br>
-                        <strong>From MRT:</strong> Stop at Shaw Blvd. Station, go down to the side of Starmall. It only takes a 5-minute walk!<br>
+                        <strong>From MRT (Manila Metro Rail Transit System):</strong> Stop at Shaw Blvd. Station, go down to the side of Starmall. It only takes a 5-minute walk!<br>
                     <strong>CarParking:</strong> Park at Starmall (5-minute walk), Park at Shangrila Mall (10-minute walk).
                     
                 </p>
