--- a/coworking.html
+++ b/coworking.html
@@ -138,7 +138,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 caption">
-                    <h1>Up to 30 % DISCOUNT!</h1>
+                    <h1>Up to 40 % DISCOUNT!</h1>
                     <!-- <a href="#coworking-form" class="btn page-scroll"> GET IT NOW!</a> -->
                     <a href="https://buff.ly/2h8yyyV"  class="btn page-scroll">GET IT NOw</a>
                 </div>
@@ -279,7 +279,7 @@
                     <h4>Cowork with us, 
                         <a style="color:black;" href="assets/Coworking-Rates.pdf" target="_new" >See rates.</a>
                     </h4>
-                    <img src="assets/images/sale-3.jpg" class="img-sale"/>
+                    <img src="assets/images/sale-3.jpg" alt="coworking sale" class="img-sale"/>
                 </div>
             </div>
             <div class="row">
