update seo for website

--- a/coworking.html
+++ b/coworking.html
@@ -17,10 +17,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Builtable - Coworking Office Space, Meeting Rooms, Private Rooms and Events space in Shaw Boulevard Mandaluyong City, Metro Manila, Philippines">
+    <meta name="author" content="Builtable Coworking">
 
-    <title>Builtable Coworking</title>
+    <title>Builtable | Coworking Office Space in Philippines, Mandaluyong City</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -38,7 +38,7 @@
     <link href='fonts/noodle.ttf'>
 
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
-
+    <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
