--- a/coworking.html
+++ b/coworking.html
@@ -97,7 +97,7 @@
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="index.html"><img alt="builtable logo" src="css/img/logo.png";></a>
+                        <a class="page-scroll" href="index.html"><img alt="builtable logo" src="css/img/logo.png"></a>
                     </li>
                     <li>
                         <a class="page-scroll active" href="coworking.html">Coworking</a>
@@ -139,8 +139,8 @@
             <div class="row">
                 <div class="col-xs-12 caption">
                     <h1>Up to 40 % DISCOUNT!</h1>
-                    <!-- <a href="#coworking-form" class="btn page-scroll"> GET IT NOW!</a> -->
-                    <a href="https://buff.ly/2h8yyyV"  class="btn page-scroll">GET IT NOw</a>
+                    <a href="#coworking-form" class="btn page-scroll"> GET IT NOW!</a>
+                    <!-- <a href="https://buff.ly/2h8yyyV"  class="btn page-scroll">GET IT NOw</a> -->
                 </div>
             </div>
         </div>
@@ -182,34 +182,34 @@
 
 
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
-                    <img src="css/img/icons_private.png">
+                    <img src="css/img/icons_private.png" alt="privacy logo">
                     <p>Private Rooms</p>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
-                    <img src="css/img/icons_meeting.png">
+                    <img src="css/img/icons_meeting.png" alt="meeting logo">
                     <p>Meeting Rooms</p>
                 </div>
 
 
                 <div class="col-lg-3  col-md-3 col-sm-6 col-xs-6">
-                    <img src="css/img/icons_net1.png">
+                    <img src="css/img/icons_net1.png" alt="internet logo"> 
                     <p>High-speed Internet</p>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
-                    <img src="css/img/icons_hardware.png">
+                    <img src="css/img/icons_hardware.png" alt="equipment logo">
                     <p>Free Usage of Equipment</p>
 
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
-                    <img src="css/img/icons_locker.png">
+                    <img src="css/img/icons_locker.png"alt="locker logo">
                     <p>Dedicated Lockers</p>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
-                    <img src="css/img/icons_zen.png">
+                    <img src="css/img/icons_zen.png" alt="zen logo">
                     <p>Zen Area</p>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
-                    <img src="css/img/icons_coffee.png">
+                    <img src="css/img/icons_coffee.png" alt="coffee logo">
                     <p>A Cup of Coffee</p>
                 </div>
             </div>
@@ -279,7 +279,7 @@
                     <h4>Cowork with us, 
                         <a style="color:black;" href="assets/Coworking-Rates.pdf" target="_new" >See rates.</a>
                     </h4>
-                    <img src="assets/images/sale-3.jpg" alt="coworking sale" class="img-sale"/>
+                    <img src="assets/images/sale-4.jpg" alt="coworking sale" class="img-sale"/>
                 </div>
             </div>
             <div class="row">
@@ -341,7 +341,7 @@
     </section>
     <div class="row footer">
         <div class="col-lg-12">
-            <h1>Builtable Copyright (c) 2017 Copyright Holder All Rights Reserved | Website by <a href="http://worksofheartph.com">WORKS OF HEART</a>                X JMTee</h1>
+            <h1>Builtable Copyright (c) 2018 Copyright Holder All Rights Reserved | Website by <a href="http://worksofheartph.com">WORKS OF HEART</a>                X JMTee</h1>
         </div>
     </div>
 
