--- a/coworking.html
+++ b/coworking.html
@@ -151,7 +151,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Featured Stories of our Community</h1>
+                    <h1>Featured Story</h1>
                     <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 com-container">
                         <div class="comm-content">
                             <span class="glyphicon glyphicon-play" data-toggle="modal" data-target="#pushModal"></span>
@@ -162,6 +162,54 @@
 
                         </div>
                     </div>
+                </div>
+                <div class="col-lg-12 startups">
+                <hr>
+                    <h1>Our Community of startups</h1>
+                    <div class="col-lg-2 col-md-4 col-sm-4 col-xs-6 companies-logo">
+                        <a href="https://www.investagrams.com/" target="_blank" title="Investagrams">
+                        <img src="css/img/logos/investagrams.png" alt="investagrams logo"/>
+                        </a>
+                    </div>
+
+                    <div class="col-lg-2 col-md-4 col-sm-4 col-xs-6 companies-logo" title="Pez.ai">
+                            <a href="http://pez.ai/" target="_blank">
+                            <img src="css/img/logos/pezai.png" alt="pezai logo"/>
+                            </a>
+                        </div>
+
+                        <div class="col-lg-2 col-md-4 col-sm-4 col-xs-6 companies-logo">
+                                <a href="http://www.ppinteractive.com/" target="_blank" title="P&P Interactive">
+                                <img src="css/img/logos/ppinteractive.png" alt="p&p interactive logo"/>
+                                </a>
+                            </div>
+                            <div class="col-lg-2 col-md-4 col-sm-4 col-xs-6 companies-logo">
+                                    <a href="https://pushkart.ph/" target="_blank" title="Pushkart PH">
+                                    <img src="css/img/logos/pushkart.png" alt="pushkartph logo"/>
+                                    </a>
+                                </div>
+                                <div class="col-lg-2 col-md-4 col-sm-4 col-xs-6 companies-logo">
+                                        <a href="http://www.tekkultura.com" target="_blank" title="Tekkultura">
+                                        <img src="css/img/logos/tekkulutura.png" alt="tekkultura logo"/>
+                                        </a>
+                                    </div>
+                                    <div class="col-lg-2 col-md-4 col-sm-4 col-xs-6 companies-logo">
+                                            <a href="https://www.adatos.com/" target="_blank" title="Adatos">
+                                            <img src="css/img/logos/adatos.png" alt="adatos logo"/>
+                                            </a>
+                                        </div>
+
+                                        <div class="col-lg-2 col-md-4 col-sm-4 col-xs-6 companies-logo">
+                                                <a href="https://www.heartsmart.ph/" target="_blank" title="Heart Smart">
+                                                <img src="css/img/logos/heartsmart.png" alt="Heart Smart logo"/>
+                                                </a>
+                                            </div>
+                                            <div class="col-lg-2 col-md-4 col-sm-4 col-xs-6 companies-logo">
+                                                    <a href="https://www.vaquform.com/" target="_blank" title="Vaquform">
+                                                    <img src="css/img/logos/vaquform.png" alt="Vaquform logo"/>
+                                                    </a>
+                                                </div>
+
                 </div>
             </div>
             
@@ -237,7 +285,7 @@
 
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>directions, directions, directions...</h1>
+                    <h1>One of the most accessible coworking in Manila!</h1>
                 </div>
                 <div class="col-lg-8">
                     <a href="https://www.google.com.ph/maps/dir/''/builtable/data=!4m5!4m4!1m0!1m2!1m1!1s0x3397c83ec6c0f395:0x51a4af0dd5cbce2d?sa=X&ved=0ahUKEwjCp4f955_VAhXLyLwKHT-4CmQQ9RcIggEwCw"
@@ -253,9 +301,9 @@
                         <br>
                         <p>
                             We are searchable at <strong>Google Maps</strong> and <strong>Waze</strong>!<br>
-                            <strong>From MRT:</strong> Stop at Shaw Blvd. Station, go down to the side of Starmall. It only
+                            <strong>From MRT:</strong> Stop at MRT Shaw Blvd. Station, go down to the side of Starmall. It only
                             takes a 5-minute walk!<br>
-                            <strong>CarParking:</strong> Park at Starmall (5-minute walk), Park at Shangrila Mall (10-minute
+                            <strong>Car Parking:</strong> Park at Starmall (5-minute walk), Park at Shangrila Mall (10-minute
                             walk).
 
                         </p>
