--- a/index.html
+++ b/index.html
@@ -230,6 +230,22 @@ height="0" width="0" ></iframe></noscript>
         </div>
 
     </section>
+
+    <div class="social-media-links">
+            <a href="https://www.facebook.com/builtable/" target="_blank">
+                <img src="css/img/Facebook.png" alt="facebook logo round"/>
+            </a>
+            <a href="https://www.linkedin.com/company/builtable-coworking/" target="_blank">
+                <img src="css/img/Linkedin.png" alt="Linkedin logo round"/>
+            </a>
+            <a href="https://www.instagram.com/explore/locations/167600830348313/builtable-coworking/" target="_blank">
+                <img src="css/img/Instagram.png" alt="Instagram logo round"/>
+            </a>
+            <a href="https://twitter.com/builtable" target="_blank">
+                <img src="css/img/Twitter.png" alt="Twitter logo round"/>
+            </a>
+    </div>
+
     <div class="row footer">
         <div class="col-lg-12">
             <h1>Builtable Copyright (c) 2018 Copyright Holder All Rights Reserved | Website by <a href="http://worksofheartph.com">WORKS OF HEART</a> X JMTee</h1>
