uipdate linkedin bug

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ height="0" width="0" ></iframe></noscript>
                 <img src="css/img/Facebook.png" alt="facebook logo round"/>
             </a>
             <a href="https://www.linkedin.com/company/builtable-coworking/" target="_blank">
-                <img src="css/img/Linkedin.png" alt="Linkedin logo round"/>
+                <img src="css/img/LinkedIn.png" alt="Linkedin logo round"/>
             </a>
             <a href="https://www.instagram.com/explore/locations/167600830348313/builtable-coworking/" target="_blank">
                 <img src="css/img/Instagram.png" alt="Instagram logo round"/>
