--- a/coworking.html
+++ b/coworking.html
@@ -103,7 +103,7 @@
                         <a class="page-scroll active" href="coworking.html">Coworking</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="learn.html">Learning</a>
+                        <a class="page-scroll" href="learn.html">Comaking</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">Who we are</a>
