--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ height="0" width="0" ></iframe></noscript>
                         <a class="page-scroll" href="coworking.html">Coworking</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="learn.html">Learning</a>
+                        <a class="page-scroll" href="learn.html">Comaking</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">Who we are</a>
@@ -102,8 +102,10 @@ height="0" width="0" ></iframe></noscript>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>CO-WORKING <br>
-                    CO-MAKING
+                    <h1>COWORKING <br>
+                    COMAKING
+                    <br>
+                    Events
                     </h1>
                 </div>
             </div>
@@ -116,7 +118,7 @@ height="0" width="0" ></iframe></noscript>
             <div class="row">
                 <div class="col-lg-12">
                     <h1>ABOUT BUILTABLE</h1>
-                    <h3>Besides being a coworking space, we provide private rooms, meetings rooms and event spaces. </h3>
+                    <h3>We are a coworking space in Manila for makers and startups; On top of that we provide private rooms, meetings rooms and event spaces. </h3>
                     <p>Built for discovery, passion and innovation. Make it Builtable! The goal of the company is to build a community for innovators and makers. A space to help with their journey of discovery. Enabling innovators by providing them necessary equipment, network and opportunities in making all things Builtable!</p>  </div>
             </div>
         </div>
