--- a/learn.html
+++ b/learn.html
@@ -132,7 +132,7 @@
                         <a class="page-scroll" href="coworking.html">Coworking</a>
                     </li>
                     <li>
-                        <a class="page-scroll active" href="learn.html">Learning</a>
+                        <a class="page-scroll active" href="learn.html">Comaking</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="index.html#about">Who we are</a>
