--- a/coworking.html
+++ b/coworking.html
@@ -105,9 +105,9 @@
                     <li>
                         <a class="page-scroll" href="learn.html">Comaking</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#about">Who we are</a>
-                    </li>
+                    <!-- <li>
+                        <a class="page-scroll" href="events.html">Events</a>
+                    </li> -->
                     <!-- <li>
                         <a class="page-scroll" href="#community">Learning</a>
                     </li>
@@ -135,7 +135,7 @@
         <div class="bg-img item" style="background-image: url(assets/images/c6.jpg)"></div>
         <div class="bg-img item" style="background-image: url(assets/images/c7.jpg)"></div>
         <div class="bg-img item" style="background-image: url(assets/images/c8.jpg)"></div>
-        <div class="bg-img item" style="background-image: url(assets/images/c9.jpg)"></div>
+       
         
 
         <div class="container">
