--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@ height="0" width="0" ></iframe></noscript>
                     <li>
                         <a class="page-scroll" href="learn.html">Comaking</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#about">Who we are</a>
-                    </li>
+                    <!-- <li>
+                        <a class="page-scroll" href="events.html">Events</a>
+                    </li> -->
                     <!-- <li>
                         <a class="page-scroll" href="#community">Learning</a>
                     </li>
@@ -119,7 +119,8 @@ height="0" width="0" ></iframe></noscript>
                 <div class="col-lg-12">
                     <h1>ABOUT BUILTABLE</h1>
                     <h3>We are a coworking space in Manila for makers and startups; On top of that we provide private rooms, meetings rooms and event spaces. </h3>
-                    <p>Built for discovery, passion and innovation. Make it Builtable! The goal of the company is to build a community for innovators and makers. A space to help with their journey of discovery. Enabling innovators by providing them necessary equipment, network and opportunities in making all things Builtable!</p>  </div>
+                    <p>Built for discovery, passion and innovation. Make it Builtable! The goal of the company is to build a community for innovators and makers. A space to help with their journey of discovery. Enabling innovators by providing them necessary equipment, network and opportunities in making all things Builtable!</p>  
+                </div>
             </div>
         </div>
     </section>
@@ -224,7 +225,7 @@ height="0" width="0" ></iframe></noscript>
 
                 </div>
                 <div class="col-lg-6">
-                 <img src="assets/images/contact.jpg" class="img-responsive"  alt="Coworking Filipinos">
+                 <img src="assets/images/contact.jpg" class="img-responsive"  alt="Coworking Space in the Philippines">
                 </div>
               </div>
 
