added blog to it

--- a/events/index.html
+++ b/events/index.html
@@ -98,7 +98,7 @@ layout: main
                           <img src="../assets/images/videoshoot.jpg" alt="hackathons">
                           <div class="caption">
                             <h3>Photo/Video Shoots <small>Private room or Coworking Area</small></h3>
-                            <p>A local TV station shooting a commercial!</p>
+                            <p>A local TV station doing a video shoot of a commercial!</p>
                             
                         </div>
                         </div>
