--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ layout: main
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 events-box">
                     <div class="eventstitle cowork" title="Coworking in Manila">
-                        <a href="assets/Coworking-Rates.pdf" target="_new">
+                        <a href="/coworking#services">
                         <span class="overlay"></span>
                       <h1>Coworking and Space Rates</h1>
                     </a>
