updates on coworking, comaking and events page.

--- a/coworking/index.html
+++ b/coworking/index.html
@@ -173,7 +173,7 @@ layout: main
    
 
     <!-- Services Section -->
-    <section id="services" class="services-section">
+    <section id="services" class="services-section coworking-services">
         <div class="container">
             <h1>Our Services</h1>
                 <div class="row">
@@ -292,7 +292,7 @@ layout: main
                                                 <h3>Monthly Pass </h3>
                                                 <h4>₱4000 <strike>₱8000</strike></h4>
                                                 <p>
-                                                    *5 days per week (per head)
+                                                    *7 days per week (per head)
                                                     <br>
                                                     *Please contact us up to discuss further.
                                               </p>
@@ -417,4 +417,4 @@ layout: main
     </section>
 
     
-  
+    {% include contact.html %}
