workshop revamp. able to buy online workshop

--- a/coworking/index.html
+++ b/coworking/index.html
@@ -2,6 +2,7 @@
 layout: main
 ---
 {% include coworkingModals.html %}
+{% include paymentModal.html %}
 
     <!-- Intro Section -->
     <section id="coworking-carousel" class="coworking-section" data-ride="carousel">
