--- a/events/index.html
+++ b/events/index.html
@@ -15,7 +15,7 @@ layout: main
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 caption">
-                    <h1>Starts at 2000 PHP per hour!*</h1>
+                    <h1>Prices go low as 300 PHP!*</h1>
                     <a href="https://m.facebook.com/messages/compose?ids=167600830348313" target="_new" class="btn page-scroll"> Message Us Now!</a>
                 </div>
             </div>
@@ -31,6 +31,20 @@ layout: main
             <div class="row">
                 <div class="col-lg-12">
                     <h2> A variety of Configurations for your Events!</h2>
+                    <div class="other-prices-events">
+                            <h4  data-target="#" data-toggle="dropdown"  aria-haspopup="true" aria-expanded="false" id="events-others" >
+                                Prices start at ₱300+
+                                <span class="caret"></span>
+                               
+                            </h4>
+                            <ul class="dropdown-menu" aria-labelledby="events-others">
+                                <li> <span class="discounted">₱300</span> <strike>₱500</strike> per Day, per Head (min. of 20pax)</li>
+                                <li> Hourly Rate - <span class="discounted">₱1500</span> <strike>₱2000</strike></li>
+                                <li> 4 hours - <span class="discounted">₱5000</span> <strike>₱8000</strike></li>
+                                <li> 8 hours - <span class="discounted">₱9000</span> <strike>₱18000</strike></li>
+                               
+                              </ul> 
+                            </div>
                     <p>*Ingress and egress included.<br>
                         *Comes with Free Wifi,Projector, Screen and Aircon</p>
                     <p></p>
