--- a/events/index.html
+++ b/events/index.html
@@ -45,6 +45,7 @@ layout: main
                                
                               </ul> 
                             </div>
+                            <a class="btn btn-link page-scroll" href="#contact" >Inquire Now!</a>
                     <p>*Ingress and egress included.<br>
                         *Comes with Free Wifi,Projector, Screen and Aircon</p>
                     <p></p>
