--- a/events/index.html
+++ b/events/index.html
@@ -15,8 +15,8 @@ layout: main
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 caption">
-                    <h1>Prices go low as 300 PHP!*</h1>
-                    <a href="https://m.facebook.com/messages/compose?ids=167600830348313" target="_new" class="btn page-scroll"> Message Us Now!</a>
+                    <h1>The Best & Affordable space for your events!</h1>
+                    <a href="#event-prices" class="btn page-scroll"> As low as 300 PHP!</a>
                 </div>
             </div>
         </div>
@@ -26,7 +26,7 @@ layout: main
 
 
     <!-- Services Section -->
-    <section id="" class="services-section events">
+    <section id="event-prices" class="services-section events">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
