update on homepage

--- a/index.html
+++ b/index.html
@@ -22,9 +22,20 @@ layout: main
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>ABOUT BUILTABLE</h1>
-                    <h3>We are a coworking space in Manila for makers and startups; On top of that we provide private rooms, meetings rooms and event spaces. </h3>
-                    <p>Built for discovery, passion and innovation. Make it Builtable! The goal of the company is to build a community for innovators and makers. A space to help with their journey of discovery. Enabling innovators by providing them necessary equipment, network and opportunities in making all things Builtable!</p>  
+                    <h1>Our Story</h1>
+                    <h3>Builtable offer spaces for coworking, private offices, workshops and events in the heart of Mandaluyong City, Philippines.</h3>
+                    <br>
+                    <p>
+                     We want startups to focus on what they do best. We invest on what is necessary by listening to what our customers really need - fast internet (up to 250 Mbps), a conducive environment for work/collaboration, accessible location (5-minutes away from MRT Shaw), flexible open hours and <a href="/coworking#services"> very affordable rates.</a>             
+
+                     We want the young makers and artists to thrive; And be in a <a href="/comaking#workshops" target="_new">place</a> where they can freely express their creativity through leading workshops and exhibits. 
+                         
+                                We have helped businesses of small to big companies (like <a href="https://www.vaquform.com/" target="_new">Vaquform</a> and <a href="https://www.microsoft.com/" target="_new">Microsoft</a>) by providing an <a href="/events" target="_new">events venue</a> for their hackathons, townhalls and meetups.
+                         </p>
+
+                         <p>
+                                Here in Builtable, our goal is more than just providing space, we empower the small players; We help <strong>BUILD</strong> the next big names in the Philippines and globally.
+                         </p>
                 </div>
             </div>
         </div>
