--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: main
             <div class="row">
                 <div class="col-lg-12">
                     <h1>Our Story</h1>
-                    <h3>Builtable offer spaces for coworking, private offices, workshops and events in the heart of Mandaluyong City, Philippines.</h3>
+                    <h3>Builtable offers spaces for coworking, private offices, workshops and events in the heart of Mandaluyong City, Philippines.</h3>
                     <br>
                     <p>
                      We want startups to focus on what they do best. We invest on what is necessary by listening to what our customers really need - fast internet (up to 250 Mbps), a conducive environment for work/collaboration, accessible location (5-minutes away from MRT Shaw), flexible open hours and <a href="/coworking#services"> very affordable rates.</a>             
