optimized some assets and styles

--- a/coworking/index.html
+++ b/coworking/index.html
@@ -351,7 +351,7 @@ layout: main
                 <div class="col-lg-8">
                     <a href="https://www.google.com.ph/maps/dir/''/builtable/data=!4m5!4m4!1m0!1m2!1m1!1s0x3397c83ec6c0f395:0x51a4af0dd5cbce2d?sa=X&ved=0ahUKEwjCp4f955_VAhXLyLwKHT-4CmQQ9RcIggEwCw"
                         target="_new">
-                        <div class="commright">
+                        <div class="commright image">
                             <h1></h1>
                         </div>
                     </a>
