optimized comaking page

--- a/comaking/index.html
+++ b/comaking/index.html
@@ -135,7 +135,7 @@ layout: main
                      <span class="promo">Early Bird Rate until {{ post.earlyBirdEndDate | date: "%B %d, %Y" }}</span>
                      {% endif %}
                  
-                     <img src="{{post.imageUrl}}" alt="{{page.imageUrlAlt}}">
+                     <img src="{{post.imageUrl}}/main-sm.jpg" alt="{{page.imageUrlAlt}}">
                   
                      {% if post.totalAttendees!= post.currentAttendees %}
 
